# mlops-zoomcamp-2025

./: Makefile  README.md  pyproject.toml
01-intro/: homework.ipynb  notebook.ipynb
