[project]
name = "mlops-zoomcamp-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "tomojpin1234",email = "tomojpin1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
