[project]
name = "mlops-zoomcamp-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "tomojpin1234",email = "tomojpin1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.2,<8.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
